--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <div class="upload__column">
         <h3 class="upload__heading">Recipe data</h3>
         <label>Title</label>
-        <input value="Title" required name="title" type="text" />
+        <input value="Title for your recipes" required name="title" type="text" />
         <label>URL</label>
         <input value="Url for image" required name="sourceUrl" type="text" />
         <label>Image URL</label>
